--- a/src/content/daily-messages/ArthurHollands_Okinawa_Kendo_Speech.mdx
+++ b/src/content/daily-messages/ArthurHollands_Okinawa_Kendo_Speech.mdx
@@ -1,7 +1,7 @@
 ---
 title: "本当の『強さ』とは何か？ー 勝ち負けを超えた、人生を貫く『道』の極意"
 date: 2025-11-23T19:00:00+09:00
-youtubeId: "YOUR_NEW_VIDEO_ID_HERE"
+youtubeId: "Xlcm1s91Qho"
 description: "元全米柔道3位、首の骨を折って地獄を見た男が語る。不屈の精神と『自然体』の極意。沖縄の道場で子供たちに伝えた、人生の金メダルとは。"
 tags: ["武士道", "レジリエンス", "教育", "自然体"]
 ---
@@ -304,7 +304,7 @@ tags: ["武士道", "レジリエンス", "教育", "自然体"]
              <div className="slide-container">
                 {/* 👇ここに新しい動画IDを入れてください */}
                 <iframe 
-                    src="https://www.youtube.com/embed/YOUR_NEW_VIDEO_ID_HERE" 
+                    src="https://www.youtube.com/embed/Xlcm1s91Qho" 
                     frameBorder="0" 
                     allowFullScreen 
                     title="Arthur Hollands Dojo Message"
