--- a/src/content/daily-messages/nihonbashi-canon-gallery-message-202506.mdx
+++ b/src/content/daily-messages/nihonbashi-canon-gallery-message-202506.mdx
@@ -333,14 +333,14 @@ tags: ["芸術", "表現者", "聖霊", "証し", "洗礼式"]
              <div className="profile-text">
                  <h3>THE SPEAKER</h3>
                  <p><strong>アーサー・ホーランド</strong><br/>
-                 新宿アルタ前での過激な路上伝道から始まり、十字架を背負って日本列島・世界を歩く伝道者。今回は、日本橋カノンギャラリーにて「表現者としての生き方」「憎しみを愛に変える奇跡」そして「渇いた心に流れる生ける水」について語ります。</p>
+                 新宿アルタ前で型破り激な路上伝道から始まり、十字架を背負って日本列島・世界を歩く伝道者。今回は、日本橋カノンギャラリーにて「表現者としての生き方」「憎しみを愛に変える奇跡」そして「渇いた心に流れる生ける水」について語ります。</p>
              </div>
         </div>
 
         <div className="intro-text">
             <p>本日は、2025年6月、日本橋カノンギャラリーで開催された集会でのアーサー・ホーランド先生のメッセージをお届けます。</p>
             <p>「芸術だけで食べていけるのか？」 多くの表現者が抱えるジレンマに対し、アーサー先生が語る「表現することの喜び」と「神様から与えられた唯一無二（Only One）の才能」について。</p>
-            <p>新宿アルタ前での過激な伝道から始まり、ヤクザの方々が次々と回心したエピソード、十字架を背負って歩いた韓国での「赦し」の奇跡など、数々の伝説的な証しも語られます。</p>
+            <p>新宿アルタ前での型破りな伝道から始まり、ヤクザの方々が次々と回心したエピソード、十字架を背負って歩いた韓国での「赦し」の奇跡など、数々の伝説的な証しも語られます。</p>
             <p>また、後半（19:14〜）では、ジムのインストラクターであるコウイチ兄弟の感動的な洗礼式、そして聖餐式（パンと杯）の意味を解き明かす貴重なシーンも収録。</p>
             <p><strong>「あなたの心から、生ける水の川が流れ出る」</strong><br/>クリスチャンの方も、そうでない方も、創作活動に向き合うすべての人に勇気を与える50分です。</p>
         </div>
@@ -386,7 +386,7 @@ tags: ["芸術", "表現者", "聖霊", "証し", "洗礼式"]
 
         <h2>04. 命の洗礼式：枝が幹につながる時</h2>
         <p>
-            メッセージの後半では、ジムを経営するパワーリフター、コウイチ兄弟の洗礼式が執り行われました。
+            メッセージの後半では、ジムを経営するパワーリフター、コウイチ兄弟（画廊を主宰しておられるむつみさんの御子息）の洗礼式が執り行われました。
         </p>
         <p>
             「枝だけで生きようとしたら枯れる。幹にとどまって、幹のエネルギーや愛がとどまったら、愛・喜び・平安……人生の実が実る」
