--- a/src/content/daily-messages/nihonbashi-canon-gallery-message-202506.mdx
+++ b/src/content/daily-messages/nihonbashi-canon-gallery-message-202506.mdx
@@ -333,7 +333,7 @@ tags: ["芸術", "表現者", "聖霊", "証し", "洗礼式"]
              <div className="profile-text">
                  <h3>THE SPEAKER</h3>
                  <p><strong>アーサー・ホーランド</strong><br/>
-                 新宿アルタ前で型破り激な路上伝道から始まり、十字架を背負って日本列島・世界を歩く伝道者。今回は、日本橋カノンギャラリーにて「表現者としての生き方」「憎しみを愛に変える奇跡」そして「渇いた心に流れる生ける水」について語ります。</p>
+                 新宿アルタ前で型破りな路上伝道から始まり、十字架を背負って日本列島・世界を歩く伝道者。今回は、日本橋カノンギャラリーにて「表現者としての生き方」「憎しみを愛に変える奇跡」そして「渇いた心に流れる生ける水」について語ります。</p>
              </div>
         </div>
 
