--- a/src/content/daily-messages/2025-12-01redux.mdx
+++ b/src/content/daily-messages/2025-12-01redux.mdx
@@ -12,8 +12,9 @@ tags: ["イエス", "マルコ", "罪", "希望", "TheArthurHollandsShow"]
   .msg-header { text-align: center; padding: 40px 0 60px; border-bottom: 1px solid #ddd; color: var(--black); }
   .msg-date { font-family: 'Oswald', sans-serif; color: #666; font-size: 0.9rem; letter-spacing: 0.2em; display: block; margin-bottom: 10px; }
   .msg-title { font-family: 'Noto Sans JP', sans-serif !important; font-size: 2.2rem; font-weight: 900 !important; line-height: 1.4; margin: 10px 0 20px; letter-spacing: -0.02em; color: #000000 !important; }
-  .msg-tags { margin-top: 20px; margin-bottom: 40px; display: flex; justify-content: center; gap: 10px; flex-wrap: wrap; }
+  .msg-tags { margin-top: 20px; margin-bottom: 30px; display: flex; justify-content: center; gap: 10px; flex-wrap: wrap; }
   .msg-tag { font-size: 0.9rem; font-weight: bold; color: var(--gold); border: 1px solid var(--gold); padding: 5px 15px; border-radius: 50px; }
+  .redux-intro { font-family: 'Shippori Mincho', serif; font-size: 0.95rem; color: #666; line-height: 1.8; margin: 20px auto 40px; max-width: 600px; padding: 0 20px; }
   .slide-container { position: relative; width: 100%; padding-bottom: 56.25%; height: 0; overflow: hidden; margin-top: 30px; border: 1px solid #ddd; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
   .slide-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; }
   .slide-caption { margin-top: 10px; font-size: 0.85rem; color: #666; font-weight: bold; }
@@ -61,6 +62,12 @@ tags: ["イエス", "マルコ", "罪", "希望", "TheArthurHollandsShow"]
             <span class="msg-tag">#希望</span>
             <span class="msg-tag">#TheArthurHollandsShow</span>
         </div>
+
+        {/* Redux説明文の追加 */}
+        <p class="redux-intro">
+            The Daily Redux ─ <br/>
+            “The Daily Redux” は、これまでの Daily アーカイブから厳選したメッセージに新たな息を吹き込んだディボーションシリーズです。日々の歩みの中で、心を整えるひとときとしてお受け取りください。
+        </p>
 
         <span class="msg-verse-ref">マルコの福音書　2章13～17節</span>
 
