--- a/src/content/daily-messages/2025-12-15.mdx
+++ b/src/content/daily-messages/2025-12-15.mdx
@@ -1,7 +1,7 @@
 ---
 title: "絶望は希望への窓口 なぜ神は試練を与えるのか？苦難があなたを高く引き上げる理由"
 date: 2025-12-15T06:30:00+09:00
-youtubeId: "Tli6Vgp-XpY"
+youtubeId: "aLVQgzkE-1o"
 description: "The Daily with Arthur Hollands"
 tags: ["ヨハネ", "希望", "賛美", "喜び", "TheArthurHollandsShow"]
 ---
