--- a/src/content/daily-messages/2025-12-18.mdx
+++ b/src/content/daily-messages/2025-12-18.mdx
@@ -1,7 +1,7 @@
 ---
 title: "神様は離さない。あなたを決して離さない『ジーザスの愛』の強烈なグリップ力"
 date: 2025-12-18T06:30:00+09:00
-youtubeId: "zJIizg-A18c"
+youtubeId: "bEP1v-LrxX8"
 description: "神様は離さない。あなたを決して離さない『ジーザスの愛』の強烈なグリップ力"
 tags: ["ジーザス", "愛", "赦し", "信仰", "希望"]
 ---
@@ -85,7 +85,7 @@ tags: ["ジーザス", "愛", "赦し", "信仰", "希望"]
     <div class="verse-box">
         <span class="label" style="color:#000; text-align:center; margin-bottom:20px;">今日の御言葉</span>
         <p class="verse-text">
-            私がすでに得たのでもなく、すでに完全にされているのでもありません。ただ捕らえようとして追い求めているのです。そして、それを得るようにとキリスト・イエスが私を捕らえてくださったのです。兄弟たちよ。私は、自分はすでに捕らえたなどと考えてはいません。ただ、この一事に励んでいます。すなわち、うしろのものを忘れ、ひたむきに前のものに向かって進み、キリスト・イエスにおいて上に召してくださる神の栄冠を得るために、目標を目ざして一心に走っているのです。
+            私がすでに得たのでもなく、すでに完全にされているのでもありません。ただ捕らえようとして追い求めているのです。そして、それを得るようにとキリスト・イエスが私を捕らえてくださったのです。兄弟たちよ。私は, 自分はすでに捕らえたなどと考えてはいません。ただ、この一事に励んでいます。すなわち、うしろのものを忘れ、ひたむきに前のものに向かって進み、キリスト・イエスにおいて上に召してくださる神の栄冠を得るために、目標を目ざして一心に走っているのです。
         </p>
         <span class="verse-ref">ピリピ人への手紙 3章12〜14節</span>
     </div>
