--- a/src/content/daily-messages/2025-12-24.mdx
+++ b/src/content/daily-messages/2025-12-24.mdx
@@ -1,7 +1,7 @@
 ---
 title: "「メリークリスマス、愛する友よ！アーサー・ホーランドが魂を込めて語る！すべての日本人に聞いてほしい、クリスマスの真のスピリット」"
 date: 2025-12-24T06:30:00+09:00
-youtubeId: "saFYe71X2VY"
+youtubeId: "RAS9JeaI2z0"
 description: "The Daily 2025/12/24"
 tags: ["愛", "ジーザス", "ヨハネ", "罪", "恵み"]
 ---
