--- a/src/content/daily-messages/2025-12-30.mdx
+++ b/src/content/daily-messages/2025-12-30.mdx
@@ -1,11 +1,12 @@
 ---
 title: "「Arthur Hollands DAILY」年末スケジュールのご案内"
 date: 2025-12-30T02:00:00+09:00
+youtubeId: ""
 description: "本日12月30日（火）のDAILY配信はお休みとし、12月31日・元旦は0:00に配信予定です。一年の振り返りと休息の時としてご活用ください。"
 tags: ["お知らせ", "ArthurHollandsShow"]
 ---
 
-{/* 手動作成版：2025/12/30 お知らせ */}
+{/* 手動作成版：2025/12/30 お知らせ（youtubeIdは必須のため空文字を設定） */}
 <style>{`
   .article-wrap { --gold: #c5a059; --black: #000000; --gray-bg: #f9f9f9; font-family: 'Noto Sans JP', sans-serif; color: var(--black); background-color: #ffffff; }
   .msg-header { text-align: center; padding: 40px 0 60px; border-bottom: 1px solid #ddd; color: var(--black); }
@@ -45,7 +46,7 @@ tags: ["お知らせ", "ArthurHollandsShow"]
             <span class="msg-tag">#ArthurHollandsShow</span>
         </div>
 
-        {/* トップ画像 (Google Driveの表示用リンクに変換済み) */}
+        {/* トップ画像 */}
         <img 
             src="https://drive.google.com/uc?export=view&id=1hlYxI3bY8NISe3PkkkpTa0DwU-I0Osnn" 
             alt="年末スケジュール" 
