--- a/src/content/daily-messages/2025-12-30.mdx
+++ b/src/content/daily-messages/2025-12-30.mdx
@@ -2,7 +2,7 @@
 title: "「Arthur Hollands DAILY」年末スケジュールのご案内"
 date: 2025-12-29T18:00:00+09:00
 youtubeId: "KoGL23h1Qyc"
-description: "年末のスケジュール調整と共に、これまでの一年の配信を振り返り、ゆっくりかみしめていただく時間をお取りいただきたく、明日12月30日のDAILY配信はお休みとさせていただきます。"
+description: "年末のスケジュール調整と共に、これまでの一年の配信を振り返り、ゆっくりかみしめていただく時間をお取りいただきたく、本日12月30日のDAILY配信はお休みとさせていただきます。"
 tags: ["お知らせ", "年末年始", "ArthurHollandsShow"]
 ---
 
@@ -49,7 +49,7 @@ tags: ["お知らせ", "年末年始", "ArthurHollandsShow"]
         <p>
             年末のスケジュール調整と共に、<br/>
             これまでの一年の配信を振り返り、ゆっくりかみしめていただく時間をお取りいただきたく、<br/>
-            <strong>明日 12月30日のDAILY配信はお休みとさせていただきます。</strong>
+            <strong>本日 12月30日のDAILY配信はお休みとさせていただきます。</strong>
         </p>
 
         <div class="highlight-box">
