--- a/src/content/daily-messages/2025-12-31.mdx
+++ b/src/content/daily-messages/2025-12-31.mdx
@@ -66,7 +66,7 @@ tags: ["聖霊", "祈り", "ジーザス", "愛", "信仰"]
 
         {/* Googleスライド埋め込み */}
         <div style="margin-top:40px;">
-             <p class="slide-caption">?? 3分で復習！ THE DAILY ディボーションガイド</p>
+             <p class="slide-caption"> 3分で復習！ THE DAILY ディボーションガイド</p>
              <div class="slide-container">
                 <iframe src="https://docs.google.com/presentation/d/1Erqmf307ung30aeeyvIlfW-usnQKwLE_5cyMY1bUOwk/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
