--- a/src/content/daily-messages/2026-01-01.mdx
+++ b/src/content/daily-messages/2026-01-01.mdx
@@ -66,7 +66,7 @@ tags: ["イエス", "ジーザス", "祈り", "愛", "罪"]
 
         {/* Googleスライド埋め込み */}
         <div style="margin-top:40px;">
-             <p class="slide-caption">?? 3分で復習！ THE DAILY ディボーションガイド</p>
+             <p class="slide-caption">3分で復習！ THE DAILY ディボーションガイド</p>
              <div class="slide-container">
                 <iframe src="https://docs.google.com/presentation/d/14bN4X7g-WKxPmQGRmcGGVRaaxwYP2mLpnFFfxvqfatY/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
