--- a/src/content/daily-messages/2026-01-01.mdx
+++ b/src/content/daily-messages/2026-01-01.mdx
@@ -1,7 +1,7 @@
 ---
 title: "「２０２６年、新創造。鷲のように舞い上がれ！主を待ち望む者にだけ与えられる『異次元の活力』」"
 date: 2026-01-01T00:00:00+09:00
-youtubeId: ""
+youtubeId: "VSVEeQSa9jI"
 description: "THE ARTHUR HOLLANDS SHOW YouTube公式サイトがスタートしました。"
 tags: ["イエス", "ジーザス", "祈り", "愛", "罪"]
 ---
@@ -62,7 +62,15 @@ tags: ["イエス", "ジーザス", "祈り", "愛", "罪"]
             <span class="msg-tag">#罪</span>
         </div>
 
-        <span class="msg-verse-ref">イザヤ書 43:19</span>
+        {/* YouTube動画埋め込み */}
+        <div style="margin-top:40px;">
+             <p class="slide-caption">WATCH MESSAGE</p>
+             <div class="slide-container">
+                <iframe src="https://www.youtube.com/embed/VSVEeQSa9jI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <span class="msg-verse-ref" style="display:block; margin-top:40px;">イザヤ書 43:19</span>
 
         {/* Googleスライド埋め込み */}
         <div style="margin-top:40px;">
