--- a/src/content/daily-messages/2026-01-03.mdx
+++ b/src/content/daily-messages/2026-01-03.mdx
@@ -1,8 +1,8 @@
 ---
-title: "明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み"
+title: "「明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み」"
 date: 2026-01-03T06:30:00+09:00
 youtubeId: "7b7XfMSQ7cU"
-description: "The Daily with Arthur Hollands 2026/01/03"
+description: "The Daily with Arthur Hollands 2026/01/03 ????"
 tags: ["希望", "罪", "祈り", "ジーザス"]
 ---
 
@@ -52,7 +52,7 @@ tags: ["希望", "罪", "祈り", "ジーザス"]
 
     <div class="msg-header">
         <span class="msg-date">2026.01.03</span>
-        <h1 class="msg-title">明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み</h1>
+        <h1 class="msg-title">「明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み」</h1>
         
         <div class="msg-tags">
             <span class="msg-tag">#希望</span>
@@ -134,18 +134,18 @@ tags: ["希望", "罪", "祈り", "ジーザス"]
     <div class="share-section">
         <span class="share-label">SHARE THIS MESSAGE</span>
         <div class="share-buttons">
-            <button class="share-button twitter" aria-label="Xでシェア" onclick="window.open('https://twitter.com/intent/tweet?text=' + encodeURIComponent('明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み | THE ARTHUR HOLLANDS SHOW') + '&url=' + encodeURIComponent(window.location.href), '_blank');">
+            <button class="share-button twitter" aria-label="Xでシェア" onclick="window.open('https://twitter.com/intent/tweet?text=' + encodeURIComponent('「明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み」 | THE ARTHUR HOLLANDS SHOW') + '&url=' + encodeURIComponent(window.location.href), '_blank');">
                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.21 -6.873L4.929 21.75H1.621l7.337-8.408L1.621 2.25H8.04l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
             </button>
             <button class="share-button facebook" aria-label="Facebookでシェア" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(window.location.href), '_blank');">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.27 0-5.192 1.583-5.192 4.615v3.385z"/></svg>
             </button>
             
-            <button class="share-button line" aria-label="LINEでシェア" onclick="window.open('https://line.me/R/msg/text/?' + encodeURIComponent('明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み | THE ARTHUR HOLLANDS SHOW ') + encodeURIComponent(window.location.href), '_blank');">
+            <button class="share-button line" aria-label="LINEでシェア" onclick="window.open('https://line.me/R/msg/text/?' + encodeURIComponent('「明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み」 | THE ARTHUR HOLLANDS SHOW ') + encodeURIComponent(window.location.href), '_blank');">
                 <img src="https://arthur-show.com/img/LINE_APP_Android.png" alt="LINE" style="width:100%; height:100%; object-fit:contain;" />
             </button>
             
-            <button class="share-button copy" aria-label="リンクをコピー" onclick="const title = '明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み | THE ARTHUR HOLLANDS SHOW'; const url = window.location.href; navigator.clipboard.writeText(title + '\n' + url).then(function(){ alert('タイトルとURLをコピーしました！'); });">
+            <button class="share-button copy" aria-label="リンクをコピー" onclick="const title = '「明けぬ夜はない！バングラさんとの出会い別れ・そして再会を夢み」 | THE ARTHUR HOLLANDS SHOW'; const url = window.location.href; navigator.clipboard.writeText(title + '\n' + url).then(function(){ alert('タイトルとURLをコピーしました！'); });">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M14.851 11.923c-.179-.641-.521-1.246-1.025-1.749-1.562-1.562-4.095-1.563-5.657 0l-4.998 4.998c-1.562 1.563-1.563 4.094 0 5.657 1.562 1.563 4.096 1.561 5.656 0l3.842-3.841.333.009c.404 0 .802-.04 1.189-.117l-4.657 4.656c-.963.963-2.528.964-3.493 0-1.481-1.481-1.481-3.883 0-5.364l4.999-4.998c.963-.963 2.525-.963 3.493 0 .312.312.529.68.666 1.074.096-.038.193-.068.292-.09.151-.035.303-.061.456-.08zm3.493-6.922c1.48 1.48 1.48 3.883 0 5.364l-4.999 4.998c-.963.963-2.528.963-3.493 0-.312-.312-.529-.68-.666-1.074-.097.038-.193.068-.292.09-.151.035-.303.061-.456.08.179.641.521 1.246 1.025 1.749 1.562 1.562 4.095 1.563 5.657 0l4.999-4.998c1.563-1.562 1.563-4.095 0-5.657-1.562-1.562-4.095-1.563-5.657 0l-3.842 3.841-.333-.009c-.404 0-.802.04-1.189.117l4.656-4.656c.963-.963 2.529-.963 3.494 0z"/></svg>
             </button>
         </div>
